--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -677,7 +677,23 @@
         <table name="FOL:1992079" class="folderheader" id="folder-header-1992079">
           <tbody>
             <tr>
-              <td class="foldertitle"><span> <a onclick="toggleDetailDiv('1992079', folderContentsURL + '?id=1992079&amp;auto=false', false, false, true);" href="#" id="toggleDetail_1992079"> <img src="images/folderminus.png" id="imgExpand_1992079" alt="expand/collapse" /> <span class="foldericon program"></span> </a> </span> <a onclick="showDetailDialog(1992079);" href="#"> <span title="Immuno-inflammation: Pulmonary Sarcoidosis" class="result-folder-name  accLev_NA" id="result-folder-name-1992079">Immuno-inflammation: Pulmonary Sarcoidosis</span> </a></td>
+            <td class="foldertitle">
+            	<span>
+                <a onclick=
+                "toggleDetailDiv('1992079', folderContentsURL + '?id=1992079&amp;auto=false', false, false, true);"
+                href="#" id="toggleDetail_1992079">
+                  <img src="images/folderminus.png" id="imgExpand_1992079" alt="expand/collapse" /> 
+                  <span class="foldericon program"></span> 
+                </a> 
+              </span>
+              <a onclick="showDetailDialog(1992079);" href="#">
+                  <span title="Immuno-inflammation: Pulmonary Sarcoidosis" 
+                        class="result-folder-name  accLev_NA" 
+                      id="result-folder-name-1992079">
+                     Immuno-inflammation: Pulmonary Sarcoidosis
+                  </span>
+              </a>
+            </td>
             </tr>
           </tbody>
         </table>
