duplicate index entry - not quite working correctly

--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -304,6 +304,41 @@
             <div class="detailexpand" name="1990066" id="1990066_detail"></div>
           </div>
         </div>
+        <table name="FOL:1992079" class="folderheader" id="folder-header-1992079">
+          <tbody>
+            <tr>
+            <td class="foldertitle">
+            	<span>
+                <a onclick=
+                "toggleDetailDiv('1992079', folderContentsURL + '?id=1992079&amp;auto=false', false, false, true);"
+                href="#" id="toggleDetail_1992079">
+                  <img src="images/folderminus.png" id="imgExpand_1992079" alt="expand/collapse" /> 
+                  <span class="foldericon program"></span> 
+                </a> 
+              </span>
+              <a onclick="showDetailDialog(1992079);" href="#">
+                  <span title="Immuno-inflammation: Pulmonary Sarcoidosis" 
+                        class="result-folder-name  accLev_NA" 
+                      id="result-folder-name-1992079">
+                     Immuno-inflammation: Pulmonary Sarcoidosis
+                  </span>
+              </a>
+            </td>
+           </tr>
+          </tbody>
+        </table>
+        <div class="detailexpand gtb1 analysesopen" name="1992079" id="1992079_detail" data="true">
+          <div class="search-results-table">
+            <table name="FOL:1990066" class="folderheader" id="folder-header-1990066">
+              <tbody>
+                <tr>
+                  <td class="foldertitle"><span> <a href="#" id="toggleDetail_1990066"> <img src="images/folderleaf.png" id="imgExpand_1990066" alt="expand/collapse" /> <span class="foldericon study"></span> </a> </span> <a onclick="showDetailDialog(1990066);" href="#"> <span title="Pulmonary Sarcoidosis Ho GSE19976" class="result-folder-name  accLev_ADMIN" id="result-folder-name-1990066">Pulmonary Sarcoidosis Ho GSE19976</span> </a></td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="detailexpand" name="1990066" id="1990066_detail"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
