--- a/JHU-demo-page/jobs.html
+++ b/JHU-demo-page/jobs.html
@@ -349,18 +349,15 @@
                 <div id="folder-viewer">
                 <div id="welcome-viewer"></div>
                 <div id="metadata-viewer" class="">
-
-
-
-
-
-
 <div style="margin:10px;padding:10px;">
     <input type="hidden" name="parentId" value="1992079" id="parentId">
 
     <div>
 
+<div style="float: right">             
+                    <span class="greybutton buttonicon addstudy">Start new analysis</span>
 
+        </div>
         <h3 class="rdc-h3">
             Analysis Jobs
         </h3>
@@ -520,9 +517,9 @@ Email Sent Successfully</pre></div>
 <div style="margin: 8px;" class="overlay" id="createStudyOverlay">
   <div>
     <div style="float: right;"> <span class="greybutton buttonicon close" id="closestudy">Close</span> </div>
-    <h3 class="rdc-h3" id="edittitle">Create Study</h3>
+    <h3 class="rdc-h3" id="edittitle">Start New Analysis</h3>
   </div>
-  <div id="createStudy"> ? </div>
+  <div id="createStudy"></div>
 </div>
 <div style="margin: 8px;" class="overlay" id="createProgramOverlay">
   <div>
