changed titles on second item in tree

--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -317,10 +317,10 @@
                 </a> 
               </span>
               <a onclick="showDetailDialog(1992078);" href="#">
-                  <span title="Immuno-inflammation: Pulmonary Sarcoidosis" 
+                  <span title="New Category Title Goes here" 
                         class="result-folder-name  accLev_NA" 
                       id="result-folder-name-1992078">
-                     Immuno-inflammation: Pulmonary Sarcoidosis
+                     New Category Title Goes here
                   </span>
               </a>
             </td>
@@ -332,7 +332,7 @@
             <table name="FOL:1990067" class="folderheader" id="folder-header-1990067">
               <tbody>
                 <tr>
-                  <td class="foldertitle"><span> <a href="#" id="toggleDetail_1990067"> <img src="images/folderleaf.png" id="imgExpand_1990067" alt="expand/collapse" /> <span class="foldericon study"></span> </a> </span> <a onclick="showDetailDialog(1990067);" href="#"> <span title="Pulmonary Sarcoidosis Ho GSE19976" class="result-folder-name  accLev_ADMIN" id="result-folder-name-1990067">Pulmonary Sarcoidosis Ho GSE19976</span> </a></td>
+                  <td class="foldertitle"><span> <a href="#" id="toggleDetail_1990067"> <img src="images/folderleaf.png" id="imgExpand_1990067" alt="expand/collapse" /> <span class="foldericon study"></span> </a> </span> <a onclick="showDetailDialog(1990067);" href="#"> <span title="New Study Title Goes here" class="result-folder-name  accLev_ADMIN" id="result-folder-name-1990067">New Study Title Goes here</span> </a></td>
                 </tr>
               </tbody>
             </table>
