--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -311,8 +311,8 @@
                 </a> 
               </span>
               <a onclick="showDetailDialog(1992078);" href="#">
-                  <span title="New Category Title Goes here" class="result-folder-name  accLev_NA" id="result-folder-name-1992078">
-                     New Category Title Goes here
+                  <span title="Mesenchymal to Epithelial Transition" class="result-folder-name  accLev_NA" id="result-folder-name-1992078">
+                     Mesenchymal to Epithelial Transition
                   </span>
               </a>
             </td>
@@ -324,7 +324,7 @@
             <table name="FOL:1990067" class="folderheader" id="folder-header-1990067">
               <tbody>
                 <tr>
-                  <td class="foldertitle"><span> <a href="#" id="toggleDetail_1990067"> <img src="images/folderleaf.png" id="imgExpand_1990067" alt="expand/collapse"> <span class="foldericon study"></span> </a> </span> <a onclick="showDetailDialog(1990067);" href="#"> <span title="New Study Title Goes here" class="result-folder-name  accLev_ADMIN" id="result-folder-name-1990067">New Study Title Goes here</span> </a></td>
+                  <td class="foldertitle"><span> <a href="#" id="toggleDetail_1990067"> <img src="images/folderleaf.png" id="imgExpand_1990067" alt="expand/collapse"> <span class="foldericon study"></span> </a> </span> <a onclick="showDetailDialog(1990067);" href="#"> <span title="OVOL Transcription Factors McEachin - GSE51975 " class="result-folder-name  accLev_ADMIN" id="result-folder-name-1990067">OVOL Transcription Factors McEachin - GSE51975</span> </a></td>
                 </tr>
               </tbody>
             </table>
