added some study detail

--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -367,28 +367,28 @@
       <tbody>
           <tr>
             <td>23</td>
-            <td>Jones 1234</td>
+            <td>OVOL Transcription Factors McEachin - GSE51975</td>
             <td>RNASeq</td>
             <td><a class="editmetadata" href="#">Processing</a></td>
             <td><a href="#">Cancel</a> / <a href="#">Pause</a> </td>
           </tr>
           <tr>
             <td>22</td>
-            <td>Smith 4321</td>
+            <td>Pulmonary Sarcoidosis Ho GSE19976</td>
             <td>RNASeq</td>
             <td>Complete</td>
             <td><a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
           </tr>
           <tr>
             <td>21</td>
-            <td>Jindal 6789</td>
+            <td>Acute Physiologic Hyperinsulinemia Coletta GSE9105</td>
             <td>RNASeq</td>
             <td>Complete</td>
             <td><a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
           </tr>
           <tr>
             <td>20</td>
-            <td>Wu 45673</td>
+            <td>Breast Cancer Desmedt GSE7390</td>
             <td>RNASeq</td>
             <td>Complete</td>
             <td><a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
