more job states

--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -348,7 +348,7 @@
     <div>
 
 <div style="float: right">             
-                    <span class="greybutton buttonicon addstudy">Start new analysis</span>
+                    <span class="greybutton buttonicon addstudy">Start new RNA-Seq analysis</span>
 
         </div>
         <h3 class="rdc-h3">
@@ -370,29 +370,29 @@
             <td>23</td>
             <td>OVOL Transcription Factors McEachin - GSE51975</td>
             <td>RNASeq</td>
-            <td><a class="editmetadata" href="#">Processing</a></td>
-            <td><a href="#">Cancel</a> / <a href="#">Pause</a> </td>
+            <td>Submitted</td>
+            <td><a href="#">Cancel</a></td>
           </tr>
           <tr>
             <td>22</td>
-            <td>Pulmonary Sarcoidosis Ho GSE19976</td>
+            <td>Breast Cancer Desmedt GSE7390</td>
             <td>RNASeq</td>
-            <td>Complete</td>
-            <td><a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
+            <td>Queued</td>
+            <td><a href="#">Cancel</a></td>
           </tr>
           <tr>
             <td>21</td>
-            <td>Acute Physiologic Hyperinsulinemia Coletta GSE9105</td>
+            <td>Pulmonary Sarcoidosis Ho GSE19976</td>
             <td>RNASeq</td>
-            <td>Complete</td>
-            <td><a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
+            <td><a class="editmetadata" href="#">Processing</a></td>
+            <td><a href="#">Cancel</a> / <a href="#">Pause</a></td>
           </tr>
           <tr>
             <td>20</td>
-            <td>Breast Cancer Desmedt GSE7390</td>
+            <td>Acute Physiologic Hyperinsulinemia Coletta GSE9105</td>
             <td>RNASeq</td>
             <td>Complete</td>
-            <td><a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
+            <td><a href="#">Load</a> / <a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
           </tr>
       </tbody>
     </table>
@@ -510,7 +510,7 @@ Email Sent Successfully</pre></div>
 <div style="margin: 8px;" class="overlay" id="createStudyOverlay">
   <div>
     <div style="float: right;"> <span class="greybutton buttonicon close" id="closestudy">Close</span> </div>
-    <h3 class="rdc-h3" id="edittitle">Start New Analysis</h3>
+    <h3 class="rdc-h3" id="edittitle">Start New RNA-Seq Analysis</h3>
   </div>
   <div id="createStudy">
  <form action="/transmart/fmFolder/index" method="post" name="createStudyForm" id="createStudyForm">
