edits, another job type

--- a/JHU-demo-page/index.html
+++ b/JHU-demo-page/index.html
@@ -348,9 +348,13 @@
     <div>
 
 <div style="float: right">             
-                    <span class="greybutton buttonicon addstudy">Start new RNA-Seq analysis</span>
+                    <span class="greybutton buttonicon addstudy">Start new ChIP-seq analysis</span><br>
 
+                    <span class="greybutton buttonicon addstudy">Start new RNA-Seq analysis</span>
+                 
         </div>
+
+
         <h3 class="rdc-h3">
             Analysis Jobs
         </h3>
@@ -360,7 +364,7 @@
           <tr>
             <th class="columnheader">Job ID</th>
             <th class="columnheader">Study Name</th>
-            <th class="columnheader">Study Type</th>
+            <th class="columnheader">Analysis  Type</th>
             <th class="columnheader">Status</th>
             <th class="columnheader">Actions</th>
           </tr>
@@ -369,30 +373,30 @@
           <tr>
             <td>23</td>
             <td>OVOL Transcription Factors McEachin - GSE51975</td>
-            <td>RNASeq</td>
+            <td>RNA-Seq</td>
             <td>Submitted</td>
             <td><a href="#">Cancel</a></td>
           </tr>
           <tr>
             <td>22</td>
             <td>Breast Cancer Desmedt GSE7390</td>
-            <td>RNASeq</td>
+            <td>RNA-Seq</td>
             <td>Queued</td>
             <td><a href="#">Cancel</a></td>
           </tr>
           <tr>
             <td>21</td>
             <td>Pulmonary Sarcoidosis Ho GSE19976</td>
-            <td>RNASeq</td>
+            <td>RNA-Seq</td>
             <td><a class="editmetadata" href="#">Processing</a></td>
             <td><a href="#">Cancel</a> / <a href="#">Pause</a></td>
           </tr>
           <tr>
             <td>20</td>
             <td>Acute Physiologic Hyperinsulinemia Coletta GSE9105</td>
-            <td>RNASeq</td>
-            <td>Complete</td>
-            <td><a href="#">Load</a> / <a class="editmetadata" href="#">View Log</a> / <a href="#">Delete</a></td>
+            <td>ChIP-seq</td>
+            <td><a class="editmetadata" href="#">Complete</a></td>
+            <td><a href="#">Load</a> / <a class="editmetadata" href="#">View Report</a> / <a href="#">Delete</a></td>
           </tr>
       </tbody>
     </table>
